prover-ray/zkcdriver/testdata/synced/invalid/type_05.zkc
//error:3:14-18:not an expression
type bool = u4
const R:u4 = bool
